--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -158,8 +158,8 @@
 <ul><li><span id="TechDraw_ExtensionCreateChainDimensionGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChainDimension.svg&amp;filetimestamp=20240707201554&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateHorizChainDimension.html" title="TechDraw ExtensionCreateHorizChainDimension/de">Horizontale Ma&szlig;kette</a>: Erstellt ein Abfolge horizontal fluchtender Ma&szlig;e.</span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChainDimension.svg&amp;filetimestamp=20240707202153&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateVertChainDimension.html" title="TechDraw ExtensionCreateVertChainDimension/de">Vertikale Ma&szlig;kette</a>: Erstellt ein Abfolge vertikal fluchtender Ma&szlig;e.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateObliqueChainDimension.svg&amp;filetimestamp=20240707201902&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateObliqueChainDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateObliqueChainDimension.html" title="TechDraw ExtensionCreateObliqueChainDimension/de">Schr&auml;ge Ma&szlig;kette</a>: Erstellt ein Abfolge schr&auml;ger fluchtender Ma&szlig;e.</li></ul>
-<dl><dd><ul><li><span id="TechDraw_ExtensionCreateCoordDimensionGroup"> <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizCoordDimension.svg&amp;filetimestamp=20240707201729&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizCoordDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateHorizCoordDimension.html" title="TechDraw ExtensionCreateHorizCoordDimension/de">Horizontale Koordinatenma&szlig;e</a>: Erstellt eine horizontale Stufenbema&szlig;ung, d.h. mehrere horizontale Ma&szlig;e, die untereinander den gleichen Abstand aufweisen und die von derselben Grundlinie starten.</span></li></ul></dd></dl>
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertCoordDimension.svg&amp;filetimestamp=20240707202244&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertCoordDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateVertCoordDimension.html" title="TechDraw ExtensionCreateVertCoordDimension/de">Vertikale Koordinatenma&szlig;e</a>: Erstellt eine vertikale Stufenbema&szlig;ung, d.h. mehrere vertikale Ma&szlig;e, die untereinander den gleichen Abstand aufweisen und die von derselben Grundlinie starten.</li></ul></dd></dl>
+<ul><li><span id="TechDraw_ExtensionCreateCoordDimensionGroup"> <span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizCoordDimension.svg&amp;filetimestamp=20240707201729&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizCoordDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateHorizCoordDimension.html" title="TechDraw ExtensionCreateHorizCoordDimension/de">Horizontale Koordinatenma&szlig;e</a>: Erstellt eine horizontale Stufenbema&szlig;ung, d.h. mehrere horizontale Ma&szlig;e, die untereinander den gleichen Abstand aufweisen und die von derselben Grundlinie starten.</span></li></ul>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertCoordDimension.svg&amp;filetimestamp=20240707202244&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertCoordDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateVertCoordDimension.html" title="TechDraw ExtensionCreateVertCoordDimension/de">Vertikale Koordinatenma&szlig;e</a>: Erstellt eine vertikale Stufenbema&szlig;ung, d.h. mehrere vertikale Ma&szlig;e, die untereinander den gleichen Abstand aufweisen und die von derselben Grundlinie starten.</li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateObliqueCoordDimension.svg&amp;filetimestamp=20240707202047&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateObliqueCoordDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateObliqueCoordDimension.html" title="TechDraw ExtensionCreateObliqueCoordDimension/de">Schr&auml;ge Koordinatenma&szlig;e</a>: Erstellt eine schr&auml;ge Stufenbema&szlig;ung, d.h. mehrere schr&auml;ge Ma&szlig;e, die untereinander den gleichen Abstand aufweisen und die von derselben Grundlinie starten.</li></ul></dd></dl>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span id="TechDraw_ExtensionChamferDimensionGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChamferDimension.svg&amp;filetimestamp=20240706151737&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChamferDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateHorizChamferDimension.html" title="TechDraw ExtensionCreateHorizChamferDimension/de">Horizontales Ma&szlig; an Fase einf&uuml;gen</a>: Erstellt ein horizontales Fasenma&szlig; mit Fasenh&ouml;he und -winkel.</span></li></ul></dd></dl>
@@ -325,12 +325,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111193244
+Cached time: 20260111193726
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.345 seconds
-Real time usage: 0.684 seconds
+CPU time usage: 0.284 seconds
+Real time usage: 0.369 seconds
 Preprocessor visited node count: 875/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
@@ -341,18 +341,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   64.700      1 -total
- 29.99%   19.406      1 Template:KEY
- 24.58%   15.902      5 Template:VersionPlus/de
- 13.43%    8.692      1 Template:TechDraw_Tools_navi/de
- 13.14%    8.503     25 Template:Version/de
-  7.02%    4.544      2 Template:Navigation_menu_2
-  6.02%    3.898      2 Template:Docnav/de
-  4.99%    3.231      1 Template:TOCright
-  4.01%    2.595      1 Template:Userdocnavi/de
+100.00%   18.565      1 -total
+ 35.84%    6.653      1 Template:TechDraw_Tools_navi/de
+ 17.07%    3.169      2 Template:Navigation_menu_2
+ 12.40%    2.303      2 Template:Docnav/de
+ 12.10%    2.246     25 Template:Version/de
+  9.28%    1.723      5 Template:VersionPlus/de
+  7.74%    1.437      1 Template:Userdocnavi/de
+  5.93%    1.101      1 Template:TOCright
+  5.91%    1.098      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111193244 and revision id 1735837. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111193726 and revision id 1735849. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
