--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -164,9 +164,7 @@
 <ul><li><span id="TechDraw_ExtensionChamferDimensionGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateHorizChamferDimension.svg&amp;filetimestamp=20240706151737&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateHorizChamferDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateHorizChamferDimension.html" title="TechDraw ExtensionCreateHorizChamferDimension/de">Horizontales Ma&szlig; einer Fase</a>: Erstellt ein horizontales Ma&szlig; mit Winkelangabe f&uuml;r eine Fase.</span></li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateVertChamferDimension.svg&amp;filetimestamp=20240706151746&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateVertChamferDimension.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateVertChamferDimension.html" title="TechDraw ExtensionCreateVertChamferDimension/de">Vertikales Ma&szlig; einer Fase</a>: Erstellt ein vertikales Ma&szlig; mit Winkelangabe f&uuml;r eine Fase.</li></ul>
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCreateLengthArc.svg&amp;filetimestamp=20240706145221&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCreateLengthArc.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionCreateLengthArc.html" title="TechDraw ExtensionCreateLengthArc/de">Bogenma&szlig;</a>: Erstellt ein Ma&szlig; f&uuml;r die (gestreckte) L&auml;nge eines Bogens.</li></ul></dd></dl>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertDiameter.svg&amp;filetimestamp=20240706152033&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/de">'&#8960;'-Symbol einf&uuml;gen</a>: F&uuml;gt ein Durchmessersymbol (&#8960;) am Anfang des Ma&szlig;textes ein.</li></ul></dd></dl>
-</div>
+<ul><li><span id="TechDraw_ExtensionInsertPrefixGroup"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertDiameter.svg&amp;filetimestamp=20240706152033&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertDiameter.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/de">'&#8960;'-Symbol einf&uuml;gen</a>: F&uuml;gt ein Durchmessersymbol (&#8960;) am Anfang des Ma&szlig;textes ein.</span></li></ul>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionInsertSquare.svg&amp;filetimestamp=20240706152131&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionInsertSquare.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare/de">'&#9633;'-Symbol einf&uuml;gen</a>: F&uuml;gt ein Vierkantsymbol (&#9633;) am Anfang des Ma&szlig;textes ein.</li></ul></dd></dl>
 </div>
@@ -319,13 +317,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111194310
+Cached time: 20260111194547
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.302 seconds
-Real time usage: 0.403 seconds
-Preprocessor visited node count: 872/1000000
+CPU time usage: 0.277 seconds
+Real time usage: 0.416 seconds
+Preprocessor visited node count: 874/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -335,18 +333,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.443      1 -total
- 31.47%    8.951      1 Template:TechDraw_Tools_navi/de
- 18.09%    5.146      2 Template:Navigation_menu_2
- 15.99%    4.548     25 Template:Version/de
- 14.17%    4.031      1 Template:Userdocnavi/de
- 10.43%    2.966      5 Template:VersionPlus/de
-  8.59%    2.442      2 Template:Docnav/de
-  5.30%    1.506      1 Template:KEY
-  5.25%    1.493      1 Template:TOCright
+100.00%   21.860      1 -total
+ 38.23%    8.357      1 Template:TechDraw_Tools_navi/de
+ 25.67%    5.611      2 Template:Navigation_menu_2
+ 12.32%    2.694     25 Template:Version/de
+ 11.79%    2.577      5 Template:VersionPlus/de
+ 11.04%    2.413      1 Template:Userdocnavi/de
+  7.95%    1.738      2 Template:Docnav/de
+  4.70%    1.027      1 Template:TOCright
+  4.66%    1.018      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111194310 and revision id 1735875. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111194547 and revision id 1735885. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
