--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -98,10 +98,8 @@
 </p>
 </td>
 <td>Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td colspan="2">Hold <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> and the middle mouse button, then move the pointer.
-
+</td>
+<td colspan="2">Podr&#382;te kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Shift</span> a prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i a pot&eacute; p&#345;esu&#328;te ukazatel.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Alternatively, hold both left and right mouse buttons, and then move the pointer.
 </p>
@@ -1337,15 +1335,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111194549
+Cached time: 20260111194717
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.337 seconds
-Real time usage: 0.468 seconds
-Preprocessor visited node count: 1799/1000000
-Post&#8208;expand include size: 89314/2097152 bytes
-Template argument size: 33360/2097152 bytes
+CPU time usage: 0.344 seconds
+Real time usage: 0.709 seconds
+Preprocessor visited node count: 1798/1000000
+Post&#8208;expand include size: 89279/2097152 bytes
+Template argument size: 33325/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1353,19 +1351,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   87.341      1 -total
- 10.29%    8.991      1 Template:SolidWorks_Navigation
-  9.89%    8.639      1 Template:Userdocnavi/cs
-  8.17%    7.136      1 Template:SiemensNX_Navigation
-  8.16%    7.128      1 Template:Touchpad_Navigation/cs
-  7.88%    6.886      8 Template:ASCII
-  7.29%    6.364      1 Template:Touchpad_Navigation
-  5.62%    4.905      2 Template:CAD_Navigation
-  4.81%    4.197      1 Template:TinkerCAD_Navigation
-  4.61%    4.026      1 Template:OpenSCAD_Navigation
+100.00%  104.898      1 -total
+  9.10%    9.547      8 Template:ASCII
+  7.38%    7.745      2 Template:CAD_Navigation
+  7.21%    7.561      1 Template:Touchpad_Navigation/cs
+  6.53%    6.848      1 Template:Userdocnavi/cs
+  5.97%    6.266      1 Template:OpenSCAD_Navigation
+  5.96%    6.248      1 Template:OpenCascade_Navigation
+  5.40%    5.663     85 Template:KEY
+  5.37%    5.633      1 Template:SiemensNX_Navigation
+  5.21%    5.462      1 Template:Inventor_Navigation/cs
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111194548 and revision id 1735886. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111194717 and revision id 1735896. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
