--- a/wiki/de/TechDraw_AxoLengthDimension.html
+++ b/wiki/de/TechDraw_AxoLengthDimension.html
@@ -75,7 +75,7 @@
 <p><span id="Display_3D_measurement"></span>
 </p>
 <h3><span class="mw-headline" id="3D-Abmessungen_anzeigen">3D-Abmessungen anzeigen</span></h3>
-<p>Siehe <a href="../de/TechDraw_LengthDimension.html#3D-Abmessungen_anzeigen" title="TechDraw LengthDimension/de">TechDraw L&auml;ngenma&szlig;</a>.
+<p>Siehe <a href="../de/TechDraw_LengthDimension.html#Display_3D_measurement" title="TechDraw LengthDimension/de">TechDraw L&auml;ngenma&szlig;</a>.
 </p>
 <div class="mw-translate-fuzzy">
 <p><span style="font-size:small;color:green;">0.22 und neuer</span>: Werden Kanten bema&szlig;t, die parallel zu globalen Koordinatenachsen verlaufen, wird der tats&auml;chliche (3D-)Wert automatisch berechnet und als Text in die Benennung des Ma&szlig;es eingef&uuml;gt.
@@ -132,12 +132,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111194909
+Cached time: 20260111194930
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.153 seconds
+CPU time usage: 0.089 seconds
+Real time usage: 0.162 seconds
 Preprocessor visited node count: 309/1000000
 Post&#8208;expand include size: 27276/2097152 bytes
 Template argument size: 10793/2097152 bytes
@@ -148,19 +148,19 @@ Unstrip post&#8208;expand size: 1743/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.154      1 -total
- 41.94%   12.646      1 Template:TechDraw_Tools_navi/de
- 21.52%    6.490      2 Template:Navigation_menu_2
- 13.20%    3.979      1 Template:Userdocnavi/de
-  9.76%    2.944      2 Template:Docnav/de
-  9.39%    2.830      1 Template:GuiCommand/de
-  7.88%    2.375      1 Template:VersionPlus/de
-  6.24%    1.882      1 Template:Caption
-  5.00%    1.509      1 Template:Button
-  4.05%    1.220      1 Template:MenuCommand
+100.00%   46.690      1 -total
+ 29.45%   13.750      1 Template:TechDraw_Tools_navi/de
+ 20.37%    9.509      2 Template:Navigation_menu_2
+ 18.46%    8.619      1 Template:VersionPlus/de
+ 13.49%    6.298      1 Template:GuiCommand/de
+ 13.49%    6.297      1 Template:Caption
+  9.03%    4.217      2 Template:Docnav/de
+  5.65%    2.637      1 Template:Userdocnavi/de
+  4.40%    2.054      1 Template:Button
+  3.18%    1.487      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:310874-0!canonical and timestamp 20260111194909 and revision id 1735902. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:310874-0!canonical and timestamp 20260111194930 and revision id 1735904. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
