--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -152,10 +152,8 @@
 <td>Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i, pot&eacute; stiskn&#283;te a podr&#382;te lev&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 <p>Pokud tla&#269;&iacute;tka uvoln&iacute;te d&#345;&iacute;ve, ne&#382; zastav&iacute;te pohyb my&scaron;i, pohled se bude d&aacute;le ot&aacute;&#269;et, pokud je tato funkce povolena.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td>
-<td>Hold the middle mouse button, then press and hold the right mouse button, then move the pointer.
-
+</td>
+<td>Podr&#382;te prost&#345;edn&iacute; tla&#269;&iacute;tko my&scaron;i, pot&eacute; stiskn&#283;te a podr&#382;te prav&eacute; tla&#269;&iacute;tko my&scaron;i a p&#345;esu&#328;te ukazatel.
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>With this method the middle mouse button may be released after the right mouse button is held pressed.
 </p>
@@ -1190,15 +1188,15 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111195516
+Cached time: 20260111195544
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.370 seconds
-Real time usage: 0.921 seconds
-Preprocessor visited node count: 1675/1000000
-Post&#8208;expand include size: 78789/2097152 bytes
-Template argument size: 28590/2097152 bytes
+CPU time usage: 0.318 seconds
+Real time usage: 0.676 seconds
+Preprocessor visited node count: 1674/1000000
+Post&#8208;expand include size: 78750/2097152 bytes
+Template argument size: 28551/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -1206,19 +1204,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  166.275      1 -total
- 14.85%   24.684      8 Template:ASCII
- 10.80%   17.954      1 Template:Blender_Navigation
-  7.70%   12.795      1 Template:Userdocnavi/cs
-  6.39%   10.622     78 Template:KEY
-  4.82%    8.015      2 Template:Docnav
-  4.70%    7.821      1 Template:CAD_Navigation
-  4.45%    7.397      1 Template:OpenSCAD_Navigation
-  4.27%    7.094      1 Template:Revit_Navigation
-  4.06%    6.748      1 Template:Gesture_Navigation
+100.00%  131.755      1 -total
+  9.17%   12.077      8 Template:ASCII
+  8.32%   10.963      1 Template:SolidWorks_Navigation
+  6.24%    8.216      1 Template:OpenSCAD_Navigation
+  6.09%    8.026      1 Template:SiemensNX_Navigation
+  5.94%    7.825      1 Template:TinkerCAD_Navigation
+  5.92%    7.800      1 Template:Userdocnavi/cs
+  5.51%    7.262     10 Template:MenuCommand
+  4.59%    6.043      1 Template:Blender_Navigation
+  4.34%    5.715      1 Template:Inventor_Navigation/cs
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195515 and revision id 1735932. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111195543 and revision id 1735936. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
