--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -185,10 +185,8 @@
 <p><span id="Gesture_navigation"></span>
 </p>
 <h3><span class="mw-headline" id="Navigace_gesty">Navigace gesty</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>This style was tailored for use with a touchscreen and pen. Nevertheless, it can also be used with a mouse, and is recommended for use when using a Mac with a trackpad.
+<p>Tento styl byl navr&#382;en pro pou&#382;it&iacute; s dotykovou obrazovkou a perem. Lze ho v&scaron;ak pou&#382;&iacute;t i s my&scaron;&iacute; a doporu&#269;uje se pro pou&#382;it&iacute; s po&#269;&iacute;ta&#269;i Mac s trackpadem.
 </p>
-</div>
 <div class="mw-translate-fuzzy">
 <p>This navigation style was tailored for usability with touchscreen and pen, but is very usable with mouse too.
 </p>
@@ -1175,13 +1173,13 @@ In <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Sketcher</a> 
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111200115
+Cached time: 20260111200335
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.360 seconds
-Real time usage: 0.506 seconds
-Preprocessor visited node count: 1668/1000000
+CPU time usage: 0.378 seconds
+Real time usage: 0.739 seconds
+Preprocessor visited node count: 1667/1000000
 Post&#8208;expand include size: 78528/2097152 bytes
 Template argument size: 28329/2097152 bytes
 Highest expansion depth: 7/100
@@ -1191,19 +1189,19 @@ Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  115.811      1 -total
- 12.23%   14.164      1 Template:Userdocnavi/cs
- 10.75%   12.454      8 Template:ASCII
-  7.99%    9.257      1 Template:OpenSCAD_Navigation
-  7.37%    8.532      1 Template:OpenCascade_Navigation
-  4.20%    4.862      1 Template:Touchpad_Navigation
-  4.09%    4.733      2 Template:OpenInventor_Navigation
-  4.08%    4.725      1 Template:Inventor_Navigation/cs
-  3.96%    4.587      1 Template:Touchpad_Navigation/cs
-  3.84%    4.449      1 Template:SolidWorks_Navigation
+100.00%  122.880      1 -total
+ 10.39%   12.772      8 Template:ASCII
+  9.45%   11.610      1 Template:Userdocnavi/cs
+  6.81%    8.369      1 Template:SiemensNX_Navigation
+  6.61%    8.121     78 Template:KEY
+  6.36%    7.819      1 Template:Touchpad_Navigation/cs
+  6.15%    7.562      1 Template:Inventor_Navigation/cs
+  5.45%    6.693      1 Template:OpenSCAD_Navigation
+  4.42%    5.432      1 Template:SolidWorks_Navigation
+  4.37%    5.364      1 Template:Touchpad_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111200114 and revision id 1735969. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111200334 and revision id 1735977. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
