--- a/wiki/de/TechDraw_Workbench.html
+++ b/wiki/de/TechDraw_Workbench.html
@@ -181,9 +181,7 @@
 </p>
 <h3><span id="Linien_hinzuf.C3.BCgen"></span><span class="mw-headline" id="Linien_hinzuf&uuml;gen">Linien hinzuf&uuml;gen</span></h3>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_LeaderLine.svg&amp;filetimestamp=20240708195607&amp;.html" class="mw-file-description"><img src="../File/TechDraw_LeaderLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_LeaderLine.html" title="TechDraw LeaderLine/de">Hinweislinie</a>: F&uuml;gt einer Ansicht eine Hinweislinie hinzu.</li></ul>
-<div class="mw-translate-fuzzy">
-<dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_FaceCenterLine.html" title="TechDraw FaceCenterLine/de">Mittellinie zu Fl&auml;chen hinzuf&uuml;gen</a>: F&uuml;gt ausgew&auml;hlten Fl&auml;chen eine Mittellinie hinzu.</li></ul></dd></dl>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_FaceCenterLine.svg&amp;filetimestamp=20241127175337&amp;.html" class="mw-file-description"><img src="../File/TechDraw_FaceCenterLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_FaceCenterLine.html" title="TechDraw FaceCenterLine/de">Mittellinie auf Fl&auml;che</a>: F&uuml;gt ausgew&auml;hlten Fl&auml;chen eine Mittellinie hinzu.</li></ul>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_2LineCenterLine.svg&amp;filetimestamp=20241127175330&amp;.html" class="mw-file-description"><img src="../File/TechDraw_2LineCenterLine.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../de/TechDraw_2LineCenterLine.html" title="TechDraw 2LineCenterLine/de">Mittellinie zwischen 2 Linien hinzuf&uuml;gen</a>: F&uuml;gt eine Mittellinie zwischen 2 Linien hinzu.</li></ul></dd></dl>
 </div>
@@ -307,13 +305,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111200234
+Cached time: 20260111200434
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.364 seconds
-Real time usage: 0.773 seconds
-Preprocessor visited node count: 872/1000000
+CPU time usage: 0.321 seconds
+Real time usage: 0.650 seconds
+Preprocessor visited node count: 871/1000000
 Post&#8208;expand include size: 27425/2097152 bytes
 Template argument size: 10242/2097152 bytes
 Highest expansion depth: 5/100
@@ -323,18 +321,18 @@ Unstrip post&#8208;expand size: 4458/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.173      1 -total
- 23.74%    5.739     25 Template:Version/de
- 23.38%    5.652      1 Template:TechDraw_Tools_navi/de
- 15.82%    3.825      2 Template:Navigation_menu_2
- 14.82%    3.582      2 Template:Docnav/de
-  8.55%    2.066      1 Template:Userdocnavi/de
-  7.02%    1.698      5 Template:VersionPlus/de
-  6.94%    1.678      1 Template:TOCright
-  5.72%    1.382      1 Template:KEY
+100.00%   42.796      1 -total
+ 43.92%   18.795      1 Template:TechDraw_Tools_navi/de
+ 26.41%   11.303      2 Template:Navigation_menu_2
+ 18.27%    7.818     25 Template:Version/de
+ 11.28%    4.827      2 Template:Docnav/de
+  8.42%    3.605      1 Template:Userdocnavi/de
+  3.77%    1.615      5 Template:VersionPlus/de
+  3.56%    1.523      1 Template:KEY
+  3.19%    1.365      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111200233 and revision id 1735975. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83899-0!canonical and timestamp 20260111200434 and revision id 1735979. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
